starting conversion to nicer layout

--- a/index.html
+++ b/index.html
@@ -11,12 +11,21 @@
 		<meta name="viewport" content="width=device-width">
 		<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 		<!-- build:css(.tmp) styles/main.css -->
+    <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
 		<link rel="stylesheet" href="style.css">
 		<!-- endbuild -->
 
     <script data-main="/config-gen.js?app=./app.js" src="/bower_components/requirejs/require.js"></script>
   </head>
 	<body>
+
+
+  <div id="userinput">
+
+
+  </div>
+
 
   <div id="vis1"></div>
   <div id="vis2"></div>
