crazy data refactoring  - unified in genomeDataLink.. all standard calls work with server OR local file !!
new URL parameters:

  http://localhost:9000/caleydo-altsplice/?mode=bilal&projectID=tcga_all
  ==> bilal's view for project "tcga_all"

  http://localhost:9000/caleydo-altsplice/?mode=hen&file=response_tp53_v3.json
  ==> hen's view for file "response_tp53..."

--- a/index.html
+++ b/index.html
@@ -23,7 +23,14 @@
 
   <div id="userinput" class="container-fluid">
     <div class="row">
-        <div class="form-group col-md-10 col-sm-10">
+      <div class="form-group col-md-8 col-sm-12" style="max-width: 800px">
+        <label for="geneSelect">Select project:</label>
+        <select class="form-control" id="projectSelect">
+        </select>
+      </div>
+    </div>
+    <div class="row">
+        <div class="form-group col-md-8 col-sm-12" style="max-width: 800px">
           <label for="geneSelect">Select gene:</label>
           <select class="form-control" id="geneSelect">
           </select>
