--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div class="form-inline col-md-12 col-sm-12">
         <div class="form-group col-md-10 col-sm-10">
           <!--<label for="toggleIntrons">Select gene:</label>-->
-          <button class="btn btn-sm btn-primary" id="toggleIntrons"> shrink Introns</button>
+          <button class="btn btn-sm " id="toggleIntrons"> shrink Introns</button>
 
           <button class="btn btn-sm " id="testIso"> select Isoform TCGA </button>
           <button class="btn btn-sm " id="testIso2"> select Isoform EGFR (bodymap) </button>
