cleaning up and highlighting in reads view.

--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
           <!--<label for="toggleIntrons">Select gene:</label>-->
           <button class="btn btn-sm btn-default" id="toggleIntrons"> shrink Introns</button>
 
-          <button class="btn btn-sm " id="testIso"> select Isoform TCGA </button>
-          <button class="btn btn-sm " id="testIso2"> select Isoform EGFR (bodymap) </button>
-          <button class="btn btn-sm " id="testIso3"> unselect isoform</button>
+          <!--<button class="btn btn-sm " id="testIso"> select Isoform TCGA </button>-->
+          <!--<button class="btn btn-sm " id="testIso2"> select Isoform EGFR (bodymap) </button>-->
+          <!--<button class="btn btn-sm " id="testIso3"> unselect isoform</button>-->
         </div>
       </div>
     </div>
