rangebands and sorting isoforms

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
           <div class="form-group form-group-sm">
             <label for="isoformSort">sort iso:</label>
             <select class="form-control form-group-sm" id="isoformSort">
-              <option value="mean_sorting">abundance mean</option>
-              <option value="">Ketchup</option>
+              <option value="mean_sorting">by abundance mean</option>
+              <option value="byExon" disabled>by selected Exon </option>
               <option>Relish</option>
             </select>
           </div>
