making a bit of a system

--- a/index.html
+++ b/index.html
@@ -81,9 +81,10 @@
 
   </div>
   <hr/>
-  <div id="vis3"></div>
-  <div id="vis2"></div>
-  <div id="vis1"></div>
+  <div id="visJxns"></div>
+  <div id="visIso"></div>
+  <div id="visReads" ></div>
+
 
 	</body>
 </html>
