bilal css file -- delete after deadline #38

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.min.css">
     <!--<link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap-theme.min.css">-->
 		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="bilal_del.css">
 		<!-- endbuild -->
 
     <script data-main="/config-gen.js?app=./app.js" src="/bower_components/requirejs/require.js"></script>
@@ -21,7 +22,7 @@
 	<body style="padding-top: 10px;">
 
 
-  <div id="userinput" class="container-fluid">
+  <div id="userinput" class="container-fluid hidden-print">
     <div class="row">
       <div class="form-group col-md-6 col-sm-12" style="max-width: 800px">
         <label for="geneSelect">Select project:</label>
