starting shrinking an widening.. postponed for later.

--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
             </select>
           </div>
 
+          <button class="btn btn-sm btn-default" id="decreaseWidth"> narrower </button>
+          <button class="btn btn-sm btn-default" id="increaseWidth"> wider </button>
+
           <!--<button class="btn btn-sm " id="testIso"> select Isoform TCGA </button>-->
           <!--<button class="btn btn-sm " id="testIso2"> select Isoform EGFR (bodymap) </button>-->
           <!--<button class="btn btn-sm " id="testIso3"> unselect isoform</button>-->
