Major renaming - Part 1

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.min.css">
     <!--<link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap-theme.min.css">-->
 		<link rel="stylesheet" href="style.css">
-		<link rel="stylesheet" href="bilal_del.css">
+		<!--<link rel="stylesheet" href="bilal_del.css">-->
 		<!-- endbuild -->
 
     <script data-main="/config-gen.js?app=./app.js" src="/bower_components/requirejs/require.js"></script>
