--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="style.css">
 
-  <script src="/caleydo_web.js?app=./app.js"></script>
+  <script src="/caleydo_web.js"></script>
 </head>
 	<body>
 
