bugfixes and started new reads view for V 1.5

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
             <input class="form-control btn-mini" id="chromosomeInfo" type="text" placeholder="..."
                    style="max-width: 30px;padding: 1px;padding-left: 5px;" readonly>
 
-            <label for="startPos">start:</label>
+            <label for="startPos">loc:</label>
             <input class="form-control btn-mini" id="startPos" type="text" placeholder="..."
-                   style="max-width: 100px;padding: 1px;padding-left: 5px;" readonly>
+                   style="max-width: 250px;padding: 1px;padding-left: 5px;" readonly>
 
             <label for="strandInfo">strand:</label>
             <input class="form-control btn-mini" id="strandInfo" type="text" placeholder="..."
@@ -86,7 +86,7 @@
         </p>
     </div>
 
-    <div id="vials_vis" hidden>
+    <div id="vials_vis" style="opacity: .0001">
          <!--<div id="geneSelector" class="selectivity-input navbar-form navbar-left" style="width: 200px; "></div>-->
         <div id="visJxns"></div>
         <div id="visIso"></div>
