axis plugin started

--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
 
     <div id="vials_vis" style="opacity: .0001">
          <!--<div id="geneSelector" class="selectivity-input navbar-form navbar-left" style="width: 200px; "></div>-->
-        <div id="visJxns"></div>
+        <div id="visJxns" style="padding-top: 5px"></div>
+        <div id="visAxis"></div>
         <div id="visIso"></div>
         <div id="visReads"></div>
     </div>
