--- a/index.html
+++ b/index.html
@@ -46,9 +46,13 @@
             </a>
         </div>
 
-        <button class="btn btn-sm btn-default buttonSelected navbar-btn navbar-left" id="toggleIntrons" style="margin-right: 3px; "> shrink introns</button>
+        <button class="btn btn-sm btn-default buttonSelected navbar-btn navbar-left" id="toggleIntrons"
+                style="margin-right: 3px; "> shrink introns
+        </button>
         <!--<button class="btn btn-sm btn-default buttonSelected navbar-btn navbar-left" id="dotsJittering" style="margin-right: 3px; "> jitter dots</button>-->
-        <button class="btn btn-sm btn-default buttonSelected navbar-btn navbar-left" id="overlayDots" style="margin-right: 3px; "> overlay dots</button>
+        <button class="btn btn-sm btn-default buttonSelected navbar-btn navbar-left" id="overlayDots"
+                style="margin-right: 3px; "> overlay dots
+        </button>
 
         <div id="projectSelector" class="selectivity-input navbar-form navbar-left" style="width: 200px;"></div>
         <div id="geneSelector" class="selectivity-input navbar-form navbar-left" style="width: 200px; "></div>
@@ -68,7 +72,6 @@
         </div>
 
 
-
     </div>
 
     </div>
@@ -77,7 +80,8 @@
 <div id="vis_canvas" style="overflow-y: auto;opacity:0 ">
     <div id="startScreen" style="position: relative; top: 30%;left: 50%;
          margin-left: -162px;margin-top: -162px; width:324px;">
-        <img src="img/logo_vials_large.png" />
+        <img src="img/logo_vials_large.png"/>
+
         <p id="startScreenText" style="text-align: center">
             <!--<span class="glyphicon glyphicon-refresh glyphicon-spin" ></span>-->
             <span style="font-size: 18pt; font-weight: bold;">
@@ -87,7 +91,7 @@
     </div>
 
     <div id="vials_vis" style="opacity: .0001">
-         <!--<div id="geneSelector" class="selectivity-input navbar-form navbar-left" style="width: 200px; "></div>-->
+        <!--<div id="geneSelector" class="selectivity-input navbar-form navbar-left" style="width: 200px; "></div>-->
         <div id="visJxns" style="padding-top: 5px"></div>
         <div id="visAxis"></div>
         <div id="visIso"></div>
