--- a/index.html
+++ b/index.html
@@ -50,8 +50,14 @@
                 style="margin-right: 3px; "> shrink introns
         </button>
         <!--<button class="btn btn-sm btn-default buttonSelected navbar-btn navbar-left" id="dotsJittering" style="margin-right: 3px; "> jitter dots</button>-->
-        <button class="btn btn-sm btn-default buttonSelected navbar-btn navbar-left" id="overlayDots"
-                style="margin-right: 3px; "> overlay dots
+        <!--<button class="btn btn-sm btn-default buttonSelected navbar-btn navbar-left" id="overlayDots"-->
+                <!--style="margin-right: 3px; "> overlay dots-->
+        <!--</button>-->
+        <button class="btn btn-sm btn-default  navbar-btn navbar-left" id="decreaseSize"
+                style="margin-right: 3px; "> <i class="fa fa-compress fa-rotate-45"></i>
+        </button>
+        <button class="btn btn-sm btn-default  navbar-btn navbar-left" id="increaseSize"
+                style="margin-right: 3px; "> <i class="fa fa-expand fa-rotate-45"></i>
         </button>
 
         <div id="projectSelector" class="selectivity-input navbar-form navbar-left" style="width: 200px;"></div>
