--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
         </button>
         <!--<button class="btn btn-sm btn-default buttonSelected navbar-btn navbar-left" id="dotsJittering" style="margin-right: 3px; "> jitter dots</button>-->
         <!--<button class="btn btn-sm btn-default buttonSelected navbar-btn navbar-left" id="overlayDots"-->
-                <!--style="margin-right: 3px; "> overlay dots-->
+        <!--style="margin-right: 3px; "> overlay dots-->
         <!--</button>-->
         <button class="btn btn-sm btn-default  navbar-btn navbar-left" id="decreaseSize"
-                style="margin-right: 3px; "> <i class="fa fa-compress fa-rotate-45"></i>
+                style="margin-right: 3px; "><i class="fa fa-compress fa-rotate-45"></i>
         </button>
         <button class="btn btn-sm btn-default  navbar-btn navbar-left" id="increaseSize"
-                style="margin-right: 3px; "> <i class="fa fa-expand fa-rotate-45"></i>
+                style="margin-right: 3px; "><i class="fa fa-expand fa-rotate-45"></i>
         </button>
 
         <div id="projectSelector" class="selectivity-input navbar-form navbar-left" style="width: 200px;"></div>
@@ -83,7 +83,7 @@
             <!--<i class="fa fa-external-link" title='export link for gene' style="font-size: 18px; padding-right: 10px;text-decoration: none;"></i>-->
             <a class="fa fa-info-circle menuRight"
                title='project info page' style="font-size: 18px; padding-right: 10px;padding-left: 10px"
-                    href="http://vcglab.org/vials" target="_blank"></a>
+               href="http://vcglab.org/vials" target="_blank"></a>
 
         </div>
 
@@ -97,30 +97,34 @@
     <div style="position: relative; top: 30%;left: 50%;
          margin-left: -300px; width:600px;" class="startScreen">
         <p style="text-align: center;">
-        <img id='vialsLogo' src="img/logo_vials_large.png" width="200"/>
-</p>
+            <img id='vialsLogo' src="img/logo_vials_large.png" width="200"/>
+        </p>
 
         <p style="text-align: center;font-size: 18pt; font-weight: bold;">
             Vials 1.5
         </p>
+
         <p style="text-align: center;">
             <b>Vi</b>sualizing <b>Al</b>ternative <b>S</b>plicing<br/>
-            more information <a href="http://vcglab.org/vials">here</a> 
+            more information <a href="http://vcglab.org/vials">here</a>
         </p>
 
-          <p id="startScreenText" style="text-align: center; padding-top: 20px; font-weight: bold;">
+        <p id="startScreenText" style="text-align: center; padding-top: 20px; font-weight: bold;">
 
-          </p>
+        </p>
 
     </div>
-        <div style="position: fixed; bottom: 20px; left:50%; width:600px; margin-left:-300px " class="startScreen">
-            <p style="text-align: center">
-                <img src="img/logo_seas.png" style='padding-right: 20px;' width="150"> <img src="img/logo_utah.png" width="150" style='padding-right: 20px;'> <img src="img/calweb.png" width="150" style='padding-right: 20px;'> TU Wien and Novartis
+    <div style="position: fixed; bottom: 20px; left:50%; width:600px; margin-left:-300px " class="startScreen">
+        <p style="text-align: center">
+            <img src="img/logo_seas.png" style='padding-right: 20px;' width="150"> <img src="img/logo_utah.png"
+                                                                                        width="150"
+                                                                                        style='padding-right: 20px;'>
+            <img src="img/calweb.png" width="150" style='padding-right: 20px;'> TU Wien and Novartis
 
-            </p>
-        </div>
+        </p>
+    </div>
 
-<!--</div>-->
+    <!--</div>-->
 
     <div id="vials_vis" style="opacity: .0001">
         <!--<div id="geneSelector" class="selectivity-input navbar-form navbar-left" style="width: 200px; "></div>-->
@@ -129,7 +133,33 @@
         <div id="visIso"></div>
         <div id="visReads"></div>
     </div>
+
+
 </div>
+
+
+<script>
+
+    if (location.hostname != 'localhost') {
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function () {
+                        (i[r].q = i[r].q || []).push(arguments)
+                    }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                    m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
+        ga('create', 'UA-45998043-2', 'auto');
+        ga('send', 'pageview');
+    }
+
+
+</script>
+
 
 </body>
 </html>
