info page changed

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <!--<i class="fa fa-external-link" title='export link for gene' style="font-size: 18px; padding-right: 10px;text-decoration: none;"></i>-->
             <a class="fa fa-info-circle menuRight"
                title='project info page' style="font-size: 18px; padding-right: 10px;padding-left: 10px"
-               href="http://vcglab.org/vials" target="_blank"></a>
+               href="http://vials.io/info/index.html" target="_blank"></a>
 
         </div>
 
@@ -107,7 +107,7 @@
 
         <p style="text-align: center;">
             <b>Vi</b>sualizing <b>Al</b>ternative <b>S</b>plicing<br/>
-            more information <a href="http://vcglab.org/vials">here</a>
+            more information <a href="http://vials.io/info/index.html">here</a>
         </p>
 
         <p id="startScreenText" style="text-align: center; padding-top: 20px; font-weight: bold;">
