convert to commonjs

--- a/src/index.html
+++ b/src/index.html
@@ -8,34 +8,6 @@
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-barplot_icon.png in the root directory -->
 
-    <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../bower_components/selectivity/dist/selectivity-full.css">
-    <link rel="stylesheet" href="style.css">
-
-
-    <script src="/caleydo_web.js"></script>
-    <style type="text/css">
-        .selectivity-input, .selectivity-dropdown {
-            font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-            /*font-weight: lighter;*/
-            font-size: 9pt;
-            margin-top: 12px;
-        }
-
-        .selectivity-single-select {
-            min-height: 10px;
-        }
-
-        .selectivity-single-select-input {
-            border-width: 0;
-            font-size: 7px;
-        }
-
-        .selectivity-single-result-container, .selectivity-caret {
-            top: 5px;
-        }
-    </style>
-
 </head>
 <body>
 <nav class="navbar navbar-default" id='navbar' style="margin: 0">
@@ -43,7 +15,7 @@
 
         <div class="navbar-header">
             <a class="navbar-brand" href="." style="padding:5px; height: 35px;">
-                <img alt="Vials" src="img/logo_vials.png" style="padding: 5px; width: 40px;">
+                <img alt="Vials" src="./img/logo_vials.png" style="padding: 5px; width: 40px;">
             </a>
         </div>
 
@@ -98,7 +70,7 @@
     <div style="position: relative; top: 30%;left: 50%;
          margin-left: -300px; width:600px;" class="startScreen">
         <p style="text-align: center;">
-            <img id='vialsLogo' src="img/logo_vials_large.png" width="200"/>
+            <img id='vialsLogo' src="./img/logo_vials_large.png" width="200"/>
         </p>
 
         <p style="text-align: center;font-size: 18pt; font-weight: bold;">
@@ -117,10 +89,10 @@
     </div>
     <div style="position: fixed; bottom: 20px; left:50%; width:600px; margin-left:-300px " class="startScreen">
         <p style="text-align: center">
-            <img src="img/logo_seas.png" style='padding-right: 20px;' width="150"> <img src="img/logo_utah.png"
+            <img src="./img/logo_seas.png" style='padding-right: 20px;' width="150"> <img src="./img/logo_utah.png"
                                                                                         width="150"
                                                                                         style='padding-right: 20px;'>
-            <img src="img/calweb.png" width="150" style='padding-right: 20px;'> TU Wien and Novartis
+            <img src="./img/calweb.png" width="150" style='padding-right: 20px;'> TU Wien and Novartis
 
         </p>
     </div>
