fix imports and copy proper html

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-barplot_icon.png in the root directory -->
-
+    <link href="./style.css"rel="stylesheet" type="text/css">
 </head>
 <body>
 <nav class="navbar navbar-default" id='navbar' style="margin: 0">
@@ -112,7 +112,8 @@
 
 
 
-
+<script src="./common.js"></script>
+<script src="./app.js"></script>
 
 </body>
 </html>
